# meta-dev-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
meta_cli/: cli.py  utils.py
meta_cli/api/: graph_client.py
meta_cli/commands/: apps.py  auth.py  config.py  templates.py  webhook.py  whatsapp.py
meta_cli/config/: config_manager.py
meta_cli/models/: responses.py
tests/: conftest.py  test_apps.py  test_auth.py  test_config_manager.py  test_graph_client.py  test_utils.py  test_whatsapp.py
