[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meta-dev-cli"
version = "0.1.0"
description = "Unofficial CLI for Meta Developer Apps and WhatsApp Cloud API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "meta", "facebook", "whatsapp", "whatsapp-api", "whatsapp-cloud-api",
    "meta-developer", "graph-api", "cli", "whatsapp-business",
    "whatsapp-bot", "chatbot", "messaging", "llm-tools", "ai-agent"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
]

[project.scripts]
meta = "meta_cli.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "responses>=0.25.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["meta_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
